corrected location of logo pngs

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <button id="theme-toggle" aria-label="Toggle Dark Mode">🌓</button>
     <main class="container">
-        <img src="logo-light.png" alt="Gig Calendar Logo" class="logo logo-light">
-        <img src="logo-dark.png" alt="Gig Calendar Logo" class="logo logo-dark">
+        <img src="assets/images/logos/logo-light.png" alt="Gig Calendar Logo" class="logo logo-light">
+        <img src="assets/images/logos/logo-dark.png" alt="Gig Calendar Logo" class="logo logo-dark">
         <h1>Gig Calendar</h1>
         <p class="tagline">Your personal companion for live music events.</p>
         
